added functions to Game object usch as get winner, play points, change player, etc for gameplay

--- a/client/src/scss/_footer.scss
+++ b/client/src/scss/_footer.scss
@@ -13,6 +13,8 @@
 		padding-right: 30px;
 		transform: translateY(-50%);
 		color: white;
+
+		pointer-events: none;
 		.footer__pageTextFade {
 			position: absolute;
 		    top: 50%;
@@ -23,5 +25,5 @@
 		    height: 100%;
 		    width: 100%;
 		}
-	}
+	}	
 }
