fix some bugs and added round indicator: 1) does not show if player played white or black, players were allowed to play before and after game started and ended, players could join an already full room, game did not end after 9 rounds

--- a/client/src/scss/elements/_textbox.scss
+++ b/client/src/scss/elements/_textbox.scss
@@ -15,6 +15,7 @@
         p {
             margin: 15px;
             pointer-events: none;
+            white-space: nowrap;
             position: relative;
         }
 
