--- a/client/src/scss/elements/_chat.scss
+++ b/client/src/scss/elements/_chat.scss
@@ -42,6 +42,36 @@
 				strong {
 					color: white;
 				}
+
+				&.msg--roundIndicator{
+					text-align: center;
+					padding-top: 10px;
+					padding-bottom: 10px;
+
+					strong::before{
+					    content: "";
+					    display: block;
+					    width: 20%;
+					    height: 1px;
+					    background-color: white;
+					    top: -5px;
+					    position: relative;
+					    left: 50%;
+					    transform: translateX(-50%);
+					}
+
+					strong::after{
+					    content: "";
+					    display: block;
+					    width: 20%;
+					    height: 1px;
+					    background-color: white;
+					    top: 5px;
+					    position: relative;
+					    left: 50%;
+					    transform: translateX(-50%);
+					}
+				}
 			}
 		}
 
